v0 with some visualization improvements

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AndreuSchoenenbergerLopez contact</title>
+		<title>Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					border-radius: 8px;
 					box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 					padding: 20px;
-					width: 700px;
+					width: 400px;
 					margin: auto;
 					display: table;
 				}
