--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AndreuSchoenenbergerLopez about me</title>
+		<title>About me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -76,11 +76,11 @@
 				<div class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
-							<div class="col-3 col-12-mobile" id="sidebar">
+							<div class="col-3 col-12-mobile imp-mobile" id="sidebar">
 								<hr class="first" />
 								<a class="image featured"><img src="images/id_picture.jpg" /></a>
 							</div>
-							<div class="col-9 col-12-mobile imp-mobile" id="content">
+							<div class="col-9 col-12-mobile" id="content">
 								<h2 class="custom-headingstart">Short bio</h2>
 									<p>
 										Statistician with solid background and more than 5 years of experience in Clinical Trials, Research, and Data Science. 
